--- a/Index.html
+++ b/Index.html
@@ -1442,12 +1442,12 @@
                 updateUI();
                 
                 // Show warning
-                const warning = document.createElement('div');
+                /*const warning = document.createElement('div');
                 warning.style.cssText = 'position: fixed; top: 100px; left: 50%; transform: translateX(-50%); background: rgba(239, 68, 68, 0.2); border: 1px solid var(--red-500); padding: 1rem 2rem; border-radius: 0.5rem; color: var(--red-400); z-index: 1000; max-width: 90%; text-align: center;';
                 warning.innerHTML = '⚠️ Usando dados estáticos. Para dados em tempo real, hospede o site ou adicione um token GitHub.';
                 document.body.appendChild(warning);
                 
-                setTimeout(() => warning.remove(), 5000);
+                setTimeout(() => warning.remove(), 5000);*/
             }
         }
 
