Update video links for project entries

--- a/index.html
+++ b/index.html
@@ -1259,18 +1259,18 @@
         // Video mapping
         const PROJECT_VIDEOS = {
             'Projeto-Ignis': {
-                video: 'https://youtu.be/Y7lBEHVUCQc?si=XdcPy0Jj7F4F11TM',
-                videoEmbed: 'https://www.youtube.com/embed/Y7lBEHVUCQc',
-                highlight: true
-            },
-            'Projeto-Aetheris': {
-                video: 'https://www.youtube.com/watch?v=wo4Gb3fGV10',
+                 video: 'https://www.youtube.com/watch?v=wo4Gb3fGV10',
                 videoEmbed: 'https://www.youtube.com/embed/wo4Gb3fGV10',
                 highlight: true
             },
+            'Projeto-Aetheris': {
+                video: 'https://youtu.be/_-6j8MYV-h4',
+                videoEmbed: 'https://youtu.be/_-6j8MYV-h4',
+                highlight: true
+            },
             'Capydev---1DSM': {
-                video: 'https://youtu.be/ytCSJOYEJRo?si=1Er8yxmThzq-ZcWI',
-                videoEmbed: 'https://www.youtube.com/embed/ytCSJOYEJRo',
+                video: 'https://youtu.be/Y7lBEHVUCQc?si=XdcPy0Jj7F4F11TM',
+                videoEmbed: 'https://www.youtube.com/embed/Y7lBEHVUCQc',
                 highlight: true
             }
         };
