Update video links for Projeto-Aetheris

--- a/index.html
+++ b/index.html
@@ -1264,8 +1264,8 @@
                 highlight: true
             },
             'Projeto-Aetheris': {
-                video: 'https://youtu.be/_-6j8MYV-h4',
-                videoEmbed: 'https://youtu.be/_-6j8MYV-h4',
+                video: 'https://www.youtube.com/watch?v=_-6j8MYV-h4,
+                videoEmbed: 'https://www.youtube.com/embed/6j8MYV-h4,
                 highlight: true
             },
             'Capydev---1DSM': {
