Update avatar_url in FALLBACK_DATA

--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,8 @@
             user: {
                 name: 'Felipe Ribeiro',
                 bio: 'Engenheiro de Produção pela UNIVESP | Desenvolvendo o futuro na Fatec-Jacareí',
-                avatar_url: null,
+                avatar_url: 'https://github.com/feliperib286.png?size=200'
+,
                 public_repos: 17,
                 followers: 9,
                 location: 'Brasil',
